[MODEBSNET-77]. Update POL statuses when closing order as cancelled